# multimodal-baby

./: .gitignore  LICENSE  README.md  checkpoint_searching.py  dataset.py  demo.py  descriptives.R  download_logs.sh  eval.py  eval_linear_decoding.py  eval_object_categories_linear_decoding.py  eval_shuffled.py  generate_html_eval.py  generate_html_viz.py  linear_decoding.py  lm_clustering.ipynb  locked_dropout.py  main.py  model_yulu.py  ngram.py  object_categories_eval.py  object_categories_linear_decoding.py  pos_analysis.py  preprocessing.py  pyproject.toml  requirements.txt  run.sh  run_eval.sh  run_eval_linear_decoding.sh  run_eval_object_categories_linear_decoding.sh  run_eval_shuffled.sh  run_linear_decoding.sh  run_object_categories_eval.sh  run_object_categories_linear_decoding.sh  runner.py  runner_config.py  setup.py  test.py  test.sh  train.py  (+5 more)
analysis/: alignment.py  analysis.ipynb  clean.py  descriptives.py  duplicates.py  embeddings.ipynb  embeddings.py  figures.R  generate_attention_maps.py  konkle-objects-alignment.ipynb  multimodal_cka.py  plot_eval_results.py  plots.R  regression.py
analysis_cvcl/: alignment.py  clean_transformer.py  embeddings.py  figures.R  generate_attention_maps.py  objects.py  run_alignment.sh
analysis_tools/: build_data.py  checkpoints.py  frame_visualization.py  hierarchy.py  multimodal_visualization.py  plotting.py  pos_tags.py  processing.py  representation_similarity.py  sentences_data.py  sentences_utils.py  sumdata.py  token_items_data.py  utils.py  word_categories.py  word_ratings.py
multimodal/: attention_maps.py  (+15 more)
(+54 files in other folders)
